@@ -1,9 +1,6 @@
 # JPhotoEdit
 Our application is a simple yet powerful image editor that can give you the ability to manipulate your images with just the click of a button.
 
-In order to run this application, navigate to src/main/java/tk/thesenate/EditJt/ and execute this command:
-`--module-path C:/Users/Dhruv/IdeaProjects/Final/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED`
-
 Now, click upload and select your image of choice.
 
 Click on the buttons to the left of the image. Each button does a different action.
